# finfeatures

./: .gitattributes  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  publish.yml
src/finfeatures/: __init__.py
src/finfeatures/core/: __init__.py  _compat.py  base.py  pipeline.py
src/finfeatures/features/: __init__.py  composite.py  momentum.py  patterns.py  price.py  regime.py  statistical.py  trend.py  volatility.py  volume.py
src/finfeatures/io/: __init__.py  adapters.py
src/finfeatures/sources/: __init__.py  yfinance.py
tests/: conftest.py  test_core.py  test_features.py  test_integration.py  test_sources.py  test_talib_equivalence.py
