[project]
name = "finfeatures"
version = "0.1.0"
description = "Source-agnostic financial timeseries feature library"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [{ name = "Your Name", email = "you@example.com" }]

keywords = ["finance", "timeseries", "features", "indicators", "ohlcv"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business :: Financial",
    "Topic :: Scientific/Engineering",
    "Typing :: Typed",
]

dependencies = [
    "pandas>=2.0",
    "numpy>=1.24",
    "scipy>=1.10",
]

[project.optional-dependencies]
# Optional data source helpers — the core library requires none of these
yfinance = ["yfinance>=0.2"]

[project.urls]
Homepage   = "https://github.com/your-org/finfeatures"
Repository = "https://github.com/your-org/finfeatures"
Issues     = "https://github.com/your-org/finfeatures/issues"

# ── Build ─────────────────────────────────────────────────────────────────
[build-system]
requires      = ["uv_build>=0.10.4,<0.11.0"]
build-backend = "uv_build"

# ── uv ────────────────────────────────────────────────────────────────────
# Dev dependencies use PEP 735 dependency groups — the uv-native approach.
# Install with:  uv sync --group dev
[dependency-groups]
dev = [
    "pytest>=8",
    "pytest-cov>=5",
    "ruff>=0.4",
    "mypy>=1.10",
    "pandas-stubs>=2.0",
    "yfinance>=0.2",
]

# ── Ruff (lint + format) ──────────────────────────────────────────────────
[tool.ruff]
line-length    = 100
target-version = "py310"
src            = ["src"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["E501"]

# ── Mypy ──────────────────────────────────────────────────────────────────
[tool.mypy]
python_version         = "3.10"
warn_return_any        = true
warn_unused_configs    = true
ignore_missing_imports = true

# ── Pytest ────────────────────────────────────────────────────────────────
[tool.pytest.ini_options]
testpaths = ["tests"]
addopts   = "-ra -q --tb=short"
markers   = [
    "network: live network requests — skip with -m 'not network'",
]

# ── Coverage ──────────────────────────────────────────────────────────────
[tool.coverage.run]
source = ["finfeatures"]
branch = true
omit   = ["tests/*"]

[tool.coverage.report]
show_missing = true
