[project]
name = "finfeatures"
version = "0.1.0"
description = "Source-agnostic financial timeseries feature library"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [
    { name = "Elijah Whitham-Powell", email = "20101453+whitham-powell@users.noreply.github.com" },
]

keywords = ["finance", "timeseries", "features", "indicators", "ohlcv"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business :: Financial",
    "Topic :: Scientific/Engineering",
    "Typing :: Typed",
]

dependencies = ["pandas>=2.0", "numpy>=1.24", "scipy>=1.10"]

[project.optional-dependencies]
# Optional data source helpers — the core library requires none of these
yfinance = ["yfinance>=0.2"]
talib = ["TA-Lib>=0.6.0"]

[project.urls]
Homepage = "https://github.com/whitham-powell/finfeatures"
Repository = "https://github.com/whitham-powell/finfeatures"
Issues = "https://github.com/whitham-powell/finfeatures/issues"

# ── Build ─────────────────────────────────────────────────────────────────
[build-system]
requires = ["uv_build>=0.10.4,<0.11.0"]
build-backend = "uv_build"

# ── uv ────────────────────────────────────────────────────────────────────
# Dev dependencies use PEP 735 dependency groups — the uv-native approach.
# Install with:  uv sync --group dev
[tool.uv]
default-groups = []

[dependency-groups]
dev = [
    "pytest>=8",
    "pytest-cov>=5",
    "ruff>=0.4",
    "mypy>=1.10",
    "pandas-stubs>=2.0",
    "yfinance>=0.2",
    "TA-Lib>=0.6.0",
]

# ── Ruff (lint + format) ──────────────────────────────────────────────────
[tool.ruff]
line-length = 100
target-version = "py310"
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["E501"]

# ── Mypy ──────────────────────────────────────────────────────────────────
[tool.mypy]
python_version = "3.10"
warn_return_any = false
warn_unused_configs = true

[[tool.mypy.overrides]]
module = ["pandas.*", "yfinance.*", "talib.*"]
ignore_missing_imports = true

# ── Pytest ────────────────────────────────────────────────────────────────
[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra -q --tb=short"
markers = [
    "network: live network requests — skip with -m 'not network'",
    "talib: requires TA-Lib",
]

# ── Coverage ──────────────────────────────────────────────────────────────
[tool.coverage.run]
source = ["finfeatures"]
branch = true
omit = ["tests/*"]

[tool.coverage.report]
show_missing = true
